# media_session

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
media_session/: __init__.py  cli.py  constants.py  datastructures.py  media_session.py  media_session_linux.py  media_session_windows.py  types.py  typing.py  utils.py
media_session/static/: template.json
